# epa-inst-libs

./: .gitignore  .gitmodules  CacheStructures.h  CounterFunctions.hpp  FrequencyConfig.cpp  InstrumentationCommon.cpp  LoopTimer.hpp  Makefile.in  Metasim.hpp  PAPIInst.cpp  PAPIInst.hpp  ScatterGatherLength.cpp  SpatialLocality.cpp  TimerFunctions.cpp  TimerFunctions.hpp  bashrc  configure  configure.ac  cshrc  tautrace.c
ReuseDistance/: Makefile.in  ReuseDistance.cpp  ReuseDistance.hpp  configure.ac
ReuseDistance/env/: .gitignore  cshrc.in
ReuseDistance/test/: Makefile.in  test.cpp
instcode/: AddressRange.cpp  AddressRange.hpp  AddressStreamBase.cpp  AddressStreamBase.hpp  AddressStreamDriver.cpp  AddressStreamDriver.hpp  AddressStreamLibrary.cpp  AddressStreamLibrary.hpp  AddressStreamStats.hpp  CacheDescriptions.txt  CacheSimulation.cpp  CacheSimulation.hpp  CounterFunctions.cpp  CounterFunctions.hpp  DataManager.hpp  DynamicInstrumentation.cpp  DynamicInstrumentation.hpp  FrequencyConfig.cpp  FrequencyConfig.hpp  InstrumentationCommon.cpp  InstrumentationCommon.hpp  LoopTimer.cpp  LoopTimer.hpp  Makefile  Makefile.in  Metasim.hpp  PAPIFunc.cpp  PAPIFunc.hpp  PAPIInst.cpp  PAPIInst.hpp  ReuseDistAddr.cpp  ReuseDistCommon.hpp  ReuseDistanceASI.cpp  ReuseDistanceASI.hpp  ScatterGatherLength.cpp  ScatterGatherLength.hpp  Simulation.cpp  SimulationStats.hpp  SpatLocalAddr.cpp  SpatialLocality.cpp  (+10 more)
instcode/ReuseDistance/: .gitignore
instcode/ReuseDistance/env/: bashrc.in
instcode/ReuseDistance/test/: other.cpp
on/: is.C.4  is.C.4.addstrinst.hiddenFunctions  is.C.4.addstrinst.static  is.C.4.is.C.4.t00000004.lbb  is.C.4.jbbinst.callTree  is.C.4.jbbinst.static  is.C.4.r00000000.t00000004.cachesim  is.C.4.r00000000.t00000004.jbbinst  is.C.4.r00000001.t00000004.cachesim  is.C.4.r00000001.t00000004.jbbinst  is.C.4.r00000002.t00000004.cachesim  is.C.4.r00000002.t00000004.jbbinst  is.C.4.r00000003.t00000004.cachesim  is.C.4.r00000003.t00000004.jbbinst
temp/: TestDfft
testapps/: Makefile
testapps/apps/: Makefile
testapps/apps/NPB3.3-SER/: .gitignore
testapps/apps/NPB3.3-SER/config/: make.def
testapps/toys/: .gitignore  Makefile
